--- a/AarhusWebDevCoop.csproj
+++ b/AarhusWebDevCoop.csproj
@@ -373,6 +373,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\ProjectsOverviewController.cs" />
     <Compile Include="ViewModels\ProjectsViewModel.cs" />
     <Compile Include="App_Data\Models\Active.generated.cs" />
     <Compile Include="App_Data\Models\ArticleItem.generated.cs" />
